--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body {
 
 .header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin: 1rem;
+  justify-content: space-between;
+  margin: 1rem 0.5rem 0 0.5rem;
   font-family: "Passero One";
   background-color: rgb(255, 255, 255);
 }
@@ -34,7 +34,6 @@ body {
 }
 .menu_button {
   display: none;
-  cursor: pointer;
 }
 
 .show_button {
@@ -49,15 +48,15 @@ body {
 .menu-div {
   display: flex;
   z-index: 1;
-  height: 100vh;
-  width: 20rem;
-  background-color: rgb(0, 26, 255);
-  opacity: 0.8;
+  height: 100%;
+  width: 26rem;
+  background-color: rgb(0, 0, 0);
+  opacity: 0.7;
   position: absolute;
-  left: 27rem;
+  left: 14rem;
   top: -7rem;
   display: none;
-  transition: 1s ease;
+  transition: 1s ease-in;
   transform: translateX(-14rem);
 }
 .animate_bottom {
@@ -67,7 +66,7 @@ body {
   display: block;
 }
 .cover {
-  height: 80vh;
+  height: 100vh;
   width: 100%;
   background-image: url("mobile_img/eu-desktop.jpg");
   background-repeat: no-repeat;
@@ -76,7 +75,7 @@ body {
   background-attachment: fixed;
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  position: 2vw -22vw;
+  position: 22vw -22vw;
   padding: 17rem 6rem;
 }
 .cover h1 {
@@ -88,14 +87,69 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  .menu_button {
+    display: block;
+    cursor: pointer;
+  }
+  .image-button {
+    display: flex;
+    justify-content: center;
+    margin-top: -1rem;
+  }
+  .menu-div {
+    z-index: 1;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.7;
+    position: absolute;
+    left: 14rem;
+    top: -0.2rem;
+    display: none;
+    transform: translateX(-14rem);
+    transition: 1s ease-in;
+    transition-delay: 1s;
+    text-decoration: none;
+    color: rgb(71, 71, 71);
+    font-family: "Passero One";
+  }
+  .collapsed_menu {
+    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .collapsed_menu a {
+    font-size: 1.8rem;
+    color: white;
+    padding-top: 1rem;
+  }
+  .animate_bottom {
+    position: relative;
+  }
+  .show_my_menu {
+    display: block;
+  }
   .cover {
-    background-position: -30rem -10rem;
+    height: 100vh;
+    width: 100%;
+    background-image: url("mobile_img/eu-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: -37rem -3rem;
+    background-attachment: fixed;
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    padding: 25rem 6rem;
+  }
+  .cover p {
+    font-family: "Passero One";
   }
   .cover h1 {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     width: 20rem;
     margin-left: -5rem;
-    margin-top: -2rem;
   }
   .cover p {
     margin-left: -5rem;
@@ -103,6 +157,7 @@ body {
 
   .header h1 {
     font-size: 1.5rem;
+    padding-bottom: 0.2rem;
   }
   .navigation {
     display: none;
@@ -119,15 +174,15 @@ body {
 
 #loader {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 55%;
+  top: 55%;
   z-index: 1;
   width: 122px;
   height: 120px;
   margin: -76px 0 0 -76px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 10px solid rgb(69, 95, 209);
+  border-top: 6px solid rgb(69, 95, 209);
   -webkit-animation: spin 1s linear infinite;
   animation: spin 1s linear infinite;
 }
@@ -136,7 +191,7 @@ body {
   0% {
     -webkit-transform: rotate(0deg);
   }
-  100% {
+  50% {
     -webkit-transform: rotate(360deg);
   }
 }
@@ -145,7 +200,7 @@ body {
   0% {
     transform: rotate(0deg);
   }
-  100% {
+  50% {
     transform: rotate(360deg);
   }
 }
